--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                 <a href="#experience" class="hover:text-sky-600 transition-colors text-sm" data-lang="nav_experience"></a>
                 <a href="#research" class="hover:text-sky-600 transition-colors text-sm" data-lang="nav_research"></a>
                 <a href="#my-path" class="hover:text-sky-600 transition-colors text-sm" data-lang="nav_my_path"></a>
-                <a href="mailto:junesong56@gmail.com" class="bg-sky-600 hover:bg-sky-700 text-white font-semibold px-4 py-2 rounded-lg transition-colors text-sm" data-lang="nav_contact"></a>
+                <a href="mailto:parkxlab@gmail.com" class="bg-sky-600 hover:bg-sky-700 text-white font-semibold px-4 py-2 rounded-lg transition-colors text-sm" data-lang="nav_contact"></a>
             </div>
             <button id="mobile-menu-button" class="md:hidden text-slate-800">
                 <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16m-7 6h7" /></svg>
@@ -74,7 +74,7 @@
             <a href="#experience" class="block py-2 px-6 text-sm hover:bg-slate-100" data-lang="nav_experience_mobile"></a>
             <a href="#research" class="block py-2 px-6 text-sm hover:bg-slate-100" data-lang="nav_research_mobile"></a>
             <a href="#my-path" class="block py-2 px-6 text-sm hover:bg-slate-100" data-lang="nav_my_path_mobile"></a>
-            <a href="mailto:junesong56@gmail.com" class="block py-2 px-6 text-sm hover:bg-slate-100" data-lang="nav_contact_mobile"></a>
+            <a href="mailto:parkxlab@gmail.com" class="block py-2 px-6 text-sm hover:bg-slate-100" data-lang="nav_contact_mobile"></a>
         </div>
     </header>
 
@@ -92,7 +92,7 @@
                 <h2 class="font-poppins text-2xl sm:text-3xl md:text-4xl text-slate-700 mt-2" data-lang="hero_title">
                 </h2>
                 <div class="mt-8 mb-8">
-                    <a href="mailto:junesong56@gmail.com" class="text-lg text-slate-800 text-center md:text-left block hover:underline">junesong56@gmail.com</a>
+                    <a href="mailto:parkxlab@gmail.com" class="text-lg text-slate-800 text-center md:text-left block hover:underline">parkxlab@gmail.com</a>
                 </div>
                 <div class="flex flex-wrap justify-center md:justify-start gap-4">
                     <a href="https://www.linkedin.com/in/park0/" target="_blank" rel="noopener noreferrer" class="bg-slate-700 hover:bg-slate-800 text-white font-semibold px-6 py-3 rounded-lg transition-colors inline-flex items-center">
@@ -346,7 +346,7 @@
             <h2 class="text-3xl font-bold text-slate-900" data-lang="footer_title"></h2>
             <p class="mt-4 text-slate-600 max-w-xl mx-auto" data-lang="footer_subtitle"></p>
             <div class="mt-8">
-                <a href="mailto:junesong56@gmail.com" class="bg-sky-600 hover:bg-sky-700 text-white font-semibold text-lg px-8 py-4 rounded-lg inline-block transition-colors">junesong56@gmail.com</a>
+                <a href="mailto:parkxlab@gmail.com" class="bg-sky-600 hover:bg-sky-700 text-white font-semibold text-lg px-8 py-4 rounded-lg inline-block transition-colors">parkxlab@gmail.com</a>
             </div>
             <div class="mt-10 text-sm text-slate-500" data-lang="footer_copy">
             </div>
@@ -408,7 +408,7 @@
                 case1_desc: `<p>My journey started with a fascination for turning ideas into reality. In the demanding automotive R&D world, I learned the non-negotiable value of precision. This purely technical role taught me that <strong class="text-lg text-sky-600">getting the details right is the foundation of any successful project.</strong></p>`,
                 case2_title: "Chapter 2: The Addition of Leadership",
                 case2_role: "Artillery Maintenance Team Leader",
-                case2_desc: `<p>Leading a 4-technician maintenance team taught me that technical skill alone isn't enough. I had to not only solve problems but also train my team to do the same. This was my first real taste of teaching – <strong class="text-lg text-sky-600">the challenge of transferring complex knowledge clearly and effectively under pressure.</strong></p>`,
+                case2_desc: `<p>Leading a 3-technician maintenance team taught me that technical skill alone isn't enough. I had to not only solve problems but also train my team to do the same. This was my first real taste of teaching – <strong class="text-lg text-sky-600">the challenge of transferring complex knowledge clearly and effectively under pressure.</strong></p>`,
                 case3_title: "Chapter 3: The Spark of Education",
                 case3_role: "University Lab Technician & Instructor",
                 case3_desc: `<p>This role was a turning point where my passion for hands-on education truly flourished. While managing a lab of over 50 machines, I put my teaching philosophy into action.</p> <p class="mt-2">I began by <strong class="text-lg text-sky-600">developing and teaching more than 10 foundational engineering workshops</strong> to over 100 students. To bridge the gap between theory and practice, I then <strong class="text-lg text-sky-600">led a 3-person student team on a capstone project to build a functional robot arm, designing all parts in SolidWorks and 3D printing custom components, including the gearing system.</strong></p> <p class="mt-2">To ensure this knowledge was sustainable for the long term, I also <strong class="text-lg text-sky-600">produced an extensive video training library of over 20 modules</strong> for future staff, documenting everything from equipment maintenance to software procedures.</p> <p class="mt-2">Seeing students turn abstract concepts into a tangible, working robot solidified my core belief: <strong class="text-lg text-sky-600">empowering people by building accessible, hands-on educational systems.</strong></p>`,
@@ -434,7 +434,7 @@
                 case7_youtube_link: "Visit AI Club Youtube",
                 footer_title: "Let's Connect",
                 footer_subtitle: "I'm always open to discussing new projects, creative ideas, or opportunities. Feel free to reach out.",
-                footer_copy: "&copy; 2025 Junseong Park. All Rights Reserved."
+                footer_copy: "2025 Junseong Park. All Rights Reserved."
             },
             es: {
                 nav_skills: "Habilidades Técnicas",
@@ -479,7 +479,7 @@
                 case1_desc: `<p>Mi viaje comenzó con una fascinación por convertir ideas en realidad. En el exigente mundo de la I+D automotriz, aprendí el valor innegociable de la precisión. Este rol puramente técnico me enseñó que <strong class="text-lg text-sky-600">prestar atención a los detalles es la base de cualquier proyecto exitoso.</strong></p>`,
                 case2_title: "Capítulo 2: La Adición del Liderazgo",
                 case2_role: "Líder del Equipo de Mantenimiento de Artillería",
-                case2_desc: `<p>Liderar un equipo de mantenimiento de 4 técnicos me enseñó que la habilidad técnica por sí sola no es suficiente. No solo tenía que resolver problemas, sino también entrenar a mi equipo para que hiciera lo mismo. Esta fue mi primera experiencia real con la enseñanza: <strong class="text-lg text-sky-600">el desafío de transferir conocimientos complejos de manera clara y efectiva bajo presión.</strong></p>`,
+                case2_desc: `<p>Liderar un equipo de mantenimiento de 3 técnicos me enseñó que la habilidad técnica por sí sola no es suficiente. No solo tenía que resolver problemas, sino también entrenar a mi equipo para que hiciera lo mismo. Esta fue mi primera experiencia real con la enseñanza: <strong class="text-lg text-sky-600">el desafío de transferir conocimientos complejos de manera clara y efectiva bajo presión.</strong></p>`,
                 case3_title: "Capítulo 3: La Chispa de la Educación",
                 case3_role: "Técnico de Laboratorio e Instructor Universitario",
                 case3_desc: `<p>Este rol fue un punto de inflexión donde mi pasión por la educación práctica realmente floreció. Mientras gestionaba un laboratorio con más de 50 máquinas, puse en práctica mi filosofía de enseñanza.</p> <p class="mt-2">Comencé <strong class="text-lg text-sky-600">desarrollando e impartiendo más de 10 talleres de ingeniería fundamentales</strong> para más de 100 estudiantes. Para cerrar la brecha entre la teoría y la práctica, luego <strong class="text-lg text-sky-600">lideré un equipo de 3 estudiantes en un proyecto de culminación para construir un brazo robótico funcional, diseñando todas las piezas en SolidWorks e imprimiendo en 3D componentes personalizados, incluido el sistema de engranajes.</strong></p> <p class="mt-2">Para asegurar que este conocimiento fuera sostenible a largo plazo, también <strong class="text-lg text-sky-600">produje una extensa biblioteca de videos de capacitación de más de 20 módulos</strong> para el personal futuro, documentando todo, desde el mantenimiento de equipos hasta los procedimientos de software.</p> <p class="mt-2">Ver a los estudiantes convertir conceptos abstractos en un robot tangible y funcional consolidó mi creencia fundamental: <strong class="text-lg text-sky-600">empoderar a las personas mediante la creación de sistemas educativos accesibles y prácticos.</strong></p>`,
@@ -505,7 +505,7 @@
                 case7_youtube_link: "Visitar el Youtube del Club de IA",
                 footer_title: "Conectemos",
                 footer_subtitle: "Siempre estoy abierto a discutir nuevos proyectos, ideas creativas u oportunidades. No dudes en contactarme.",
-                footer_copy: "&copy; 2025 Junseong Park. Todos los derechos reservados."
+                footer_copy: "2025 Junseong Park. Todos los derechos reservados."
             },
             ko: {
                 nav_skills: "기술 역량",
@@ -550,7 +550,7 @@
                 case1_desc: `<p>저의 여정은 아이디어를 현실로 만드는 것에 대한 매력으로 시작되었습니다. 까다로운 자동차 R&D 세계에서, 저는 정밀함이라는 타협할 수 없는 가치를 배웠습니다. 이 순수 기술직을 통해 저는 <strong class="text-lg text-sky-600">디테일을 완벽하게 해내는 것이 모든 성공적인 프로젝트의 기초라는 것</strong>을 깨달았습니다.</p>`,
                 case2_title: "2장: 리더십의 추가",
                 case2_role: "포병 정비팀장",
-                case2_desc: `<p>4명의 기술자로 구성된 정비팀을 이끌면서 기술력만으로는 충분하지 않다는 것을 배웠습니다. 저는 문제를 해결할 뿐만 아니라, 팀원들이 같은 일을 할 수 있도록 훈련시켜야 했습니다. 이것이 저의 첫 번째 진정한 교육 경험이었습니다. <strong class="text-lg text-sky-600">압박이 심한 상황 속에서 복잡한 지식을 명확하고 효과적으로 전달하는 도전</strong>이었습니다.</p>`,
+                case2_desc: `<p>3명의 기술자로 구성된 정비팀을 이끌면서 기술력만으로는 충분하지 않다는 것을 배웠습니다. 저는 문제를 해결할 뿐만 아니라, 팀원들이 같은 일을 할 수 있도록 훈련시켜야 했습니다. 이것이 저의 첫 번째 진정한 교육 경험이었습니다. <strong class="text-lg text-sky-600">압박이 심한 상황 속에서 복잡한 지식을 명확하고 효과적으로 전달하는 도전</strong>이었습니다.</p>`,
                 case3_title: "3장: 교육의 불꽃",
                 case3_role: "대학 연구실 기술자 및 강사",
                 case3_desc: `<p>이 역할은 체험 기반 교육에 대한 저의 열정이 진정으로 꽃피게 된 전환점이었습니다. 50개가 넘는 기기를 관리하는 연구실 책임자로서, 저의 교육 철학을 실천에 옮겼습니다.</p> <p class="mt-2">먼저 100명이 넘는 학생들에게 <strong class="text-lg text-sky-600">10개 이상의 기초 엔지니어링 워크숍을 개발하고 진행했습니다.</strong> 이론과 실제의 간극을 메우기 위해, <strong class="text-lg text-sky-600">3명의 학생 팀을 이끌고 직접 SolidWorks로 모든 부품을 설계하고 기어 시스템을 포함한 맞춤형 부품을 3D 프린터로 제작하여, 실제로 작동하는 로봇팔을 만드는 캡스톤 프로젝트를 완수했습니다.</strong></p> <p class="mt-2">또한, 연구실의 지식이 장기적으로 지속 가능하도록, 미래의 담당자들을 위해 장비 유지보수부터 소프트웨어 사용법까지 모든 것을 기록한 <strong class="text-lg text-sky-600">20개 이상의 모듈로 구성된 방대한 영상 교육 라이브러리를 제작했습니다.</strong></p> <p class="mt-2">학생들이 추상적인 개념을 실제 작동하는 로봇이라는 결과물로 만들어내는 것을 보며 저의 핵심 신념은 더욱 확고해졌습니다: <strong class="text-lg text-sky-600">누구나 쉽게 참여할 수 있는 체험 기반의 교육 시스템을 만들어 사람들의 성장을 돕는 것.</strong></p>`,
@@ -576,7 +576,7 @@
                 case7_youtube_link: "AI 클럽 유튜브 방문하기",
                 footer_title: "연락주세요",
                 footer_subtitle: "새로운 프로젝트, 창의적인 아이디어, 또는 기회에 대해 언제나 논의할 준비가 되어 있습니다. 편하게 연락주세요.",
-                footer_copy: "&copy; 2025 박준성. 모든 권리 보유."
+                footer_copy: "2025 박준성. 모든 권리 보유."
             }
         };
 
