--- a/index.html
+++ b/index.html
@@ -55,6 +55,48 @@
 </head>
 <body class="bg-white text-slate-700">
 
+    <section class="text-center py-16">
+        <div class="container mx-auto px-6">
+            <img src="images/parkxlab_logo.jpeg" alt="Park x Lab Logo" class="mx-auto h-24 w-auto">
+            <h2 class="mt-4 text-2xl font-semibold text-slate-800">Park's Lab for Learning by building</h2>
+        </div>
+    </section>
+
+    <section class="bg-slate-50 py-20">
+        <div class="container mx-auto px-6">
+            <div class="mb-16">
+                <h2 class="section-title mb-12">Projects in progress</h2>
+                <div class="grid md:grid-cols-2 gap-10 max-w-5xl mx-auto">
+                    <a href="https://www.finitup.com/" target="_blank" rel="noopener noreferrer" class="block bg-white rounded-lg shadow-md p-6 hover:scale-105 transition-transform">
+                        <img src="images/finitup.jpg" alt="Finitup Project" class="rounded-md w-full h-48 object-cover mb-4">
+                        <h3 class="text-xl font-bold text-slate-900">Finitup</h3>
+                        <p class="text-slate-600 mt-2">An AI-powered system to automate financial analysis and valuation.</p>
+                    </a>
+                    <a href="https://sites.google.com/view/utrgvai" target="_blank" rel="noopener noreferrer" class="block bg-white rounded-lg shadow-md p-6 hover:scale-105 transition-transform">
+                        <img src="images/aiclub.jpg" alt="AI Club Project" class="rounded-md w-full h-48 object-cover mb-4">
+                        <h3 class="text-xl font-bold text-slate-900">AI Club at UTRGV</h3>
+                        <p class="text-slate-600 mt-2">A community to make AI accessible for all students through hands-on projects.</p>
+                    </a>
+                </div>
+            </div>
+
+            <div>
+                <h2 class="section-title mb-12">Completed projects</h2>
+                <div class="max-w-2xl mx-auto">
+                    <a href="https://miutrgv.github.io/research/bee-monitoring.html" target="_blank" rel="noopener noreferrer" class="block bg-white rounded-lg shadow-md p-6 hover:scale-105 transition-transform">
+                        <img src="images/beehive.jpg" alt="AI Vision Project" class="rounded-md w-full h-56 object-cover mb-4">
+                        <h3 class="text-xl font-bold text-slate-900">AI Vision (IntelliBeeHive)</h3>
+                        <p class="text-slate-600 mt-2">An AI/IoT monitoring system for honey bees, funded by the USDA.</p>
+                    </a>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section class="py-16">
+        <h2 class="section-title">About Me</h2>
+    </section>
+
     <header class="bg-white/95 backdrop-blur-lg sticky top-0 z-50 shadow-md border-b border-slate-200">
         <nav class="container mx-auto px-6 py-4 flex justify-between items-center">
             <a href="#" class="text-xl font-poppins font-bold text-slate-900"><strong>Junseong Park</strong></a>
@@ -390,7 +432,6 @@
                 industry_exp_content: `<div class="mb-10 ml-8"><span class="absolute flex items-center justify-center w-4 h-4 bg-sky-600 rounded-full -left-2 ring-4 ring-white"></span><h3 class="text-lg font-semibold text-slate-900"><strong>Software Engineer – LLM AI Trainer</strong> <span class="text-sky-700">@ <strong>Outlier (a Scale AI Company)</strong></span></h3><time class="block mb-2 text-sm font-normal leading-none text-slate-500">Dec 2024 – Present</time><ul class="list-disc list-inside text-slate-600 text-sm space-y-1 mt-2"><li>Design and write production-level Python and C++ solutions used as high-accuracy training data for <strong>industry-leading clients such as OpenAI and Meta</strong>.</li><li>Directly improve LLM accuracy, reasoning, and safety by <strong>fine-tuning models using Reinforcement Learning with Human Feedback (RLHF)</strong>.</li></ul></div><div class="mb-10 ml-8"><span class="absolute flex items-center justify-center w-4 h-4 bg-sky-600 rounded-full -left-2 ring-4 ring-white"></span><h3 class="text-lg font-semibold text-slate-900">Maintenance Project Coordinator, Field Systems <span class="text-sky-700">@ Republic of Korea Army</span></h3><time class="block mb-2 text-sm font-normal leading-none text-slate-500">Jun 2016 – Mar 2018</time><ul class="list-disc list-inside text-slate-600 text-sm space-y-1 mt-2"><li><strong>Managed the entire maintenance lifecycle</strong> for a fleet of over 10 mission-critical armored vehicles, <strong>achieving 100% operational readiness</strong> through optimized scheduling and resource allocation.</li><li>Ensured the integrity of a portfolio of three interconnected electronic control systems, including fire control and ammunition handling systems.</li><li><strong>Led and mentored a 3-person technical team</strong>, managing stakeholder relationships with over 50 users and senior commanders.</li><li>Demonstrated <strong>crisis management and problem-solving under pressure</strong> by successfully executing immediate combat readiness drills.</li></ul></div><div class="ml-8"><span class="absolute flex items-center justify-center w-4 h-4 bg-sky-600 rounded-full -left-2 ring-4 ring-white"></span><h3 class="text-lg font-semibold text-slate-900">Automotive Prototyping Technician <span class="text-sky-700">@ Creative Design Center</span></h3><time class="block mb-2 text-sm font-normal leading-none text-slate-500">May 2015 – May 2016</time><ul class="list-disc list-inside text-slate-600 text-sm space-y-1 mt-2"><li>Produced high-fidelity automotive prototypes (headlights, dashboards) for a <strong>primary Hyundai/Kia supplier</strong> using SLA 3D printing and precision post-processing.</li></ul></div>`,
                 research_exp_title: "Research Experience",
                 research_exp_content: `<div class="bg-slate-50 p-8 rounded-xl shadow-lg border border-slate-200">
-                <!-- <h3 class="text-xl font-bold text-slate-900"><strong>Founder & Developer</strong> | AI(LLM&RL)-Powered Financial Analysis Automation System</h3><time class="block my-2 text-sm font-normal leading-none text-slate-500">2025 – Present</time><ul class="mt-2 text-slate-600 list-disc list-inside space-y-1 text-sm"><li>Developing an MVP to <strong>automate financial valuation</strong> by implementing models from MBA finance courses, aiming to <strong>reduce manual analysis time by 90%</strong>.</li><li><strong>Engineering an automated analysis pipeline</strong> by integrating FinRL (for prediction) and FinRobot (for reporting) open-source libraries.</li></ul><div class="mt-4"><a href="https://www.finitup.com/" target="_blank" rel="noopener noreferrer" class="tech-tag hover:bg-sky-200">Project Site</a><a href="https://github.com/8park/fin-dss" target="_blank" rel="noopener noreferrer" class="tech-tag hover:bg-sky-200">GitHub</a></div></div><div class="bg-slate-50 p-8 rounded-xl shadow-lg border border-slate-200"> -->
                 <h3 class="text-xl font-bold text-slate-900">AI Vision Researcher | IntelliBeeHive: Bee Monitoring System, UTRGV</h3><time class="block my-2 text-sm font-normal leading-none text-slate-500">Aug 2021 – Aug 2022</time><ul class="mt-2 text-slate-600 list-disc list-inside space-y-1 text-sm"><li>Served as a <strong>key researcher on a USDA-funded project</strong>, contributing to the foundational design and implementation of the 'IntelliBeeHive' AI/IoT monitoring system.</li><li><strong>Engineered the end-to-end data pipeline</strong> by deploying collection scripts on embedded systems (NVIDIA Jetson Nano) and automating data transmission through recurring jobs in a Linux environment.</li><li>Independently designed and <strong>built the Power over Ethernet (PoE) network infrastructure</strong> to ensure stable field operation in challenging, real-world conditions.</li><li><strong>Established and managed a collaborative research platform</strong> by deploying JupyterServer on a <strong>4-GPU server</strong>, enabling seamless computational resource sharing for the entire team.</li></ul><div class="mt-4"><a href="https://bee.utrgv.edu/" target="_blank" rel="noopener noreferrer" class="tech-tag hover:bg-sky-200" data-lang="research_bee_link">Research Website</a></div></div>`, 
                 research_finitup_link: "Project Site",
                 research_finitup_github: "GitHub",
