--- a/index.html
+++ b/index.html
@@ -83,14 +83,22 @@
             <div>
                 <h2 class="section-title mb-12">Completed projects</h2>
                 <div class="max-w-2xl mx-auto">
-                    <a href="https://miutrgv.github.io/research/bee-monitoring.html" target="_blank" rel="noopener noreferrer" class="block bg-white rounded-lg shadow-md p-6 hover:scale-105 transition-transform">
-                        <img src="images/beehive.jpg" alt="AI Vision Project" class="rounded-md w-full h-56 object-cover mb-4">
+                    <div class="bg-white rounded-lg shadow-md p-6 hover:scale-105 transition-transform">
+                        <img src="images/intellibeehive.gif" alt="IntelliBeeHive System in action" class="rounded-md w-full h-56 object-cover mb-4">
                         <h3 class="text-xl font-bold text-slate-900">AI Vision (IntelliBeeHive)</h3>
                         <p class="text-slate-600 mt-2">An AI/IoT monitoring system for honey bees, funded by the USDA.</p>
-                    </a>
+                        <div class="mt-6 flex flex-wrap gap-4">
+                            <a href="https://miutrgv.github.io/research/bee-monitoring.html" target="_blank" rel="noopener noreferrer" class="inline-block bg-sky-100 hover:bg-sky-200 text-sky-800 font-semibold text-sm px-4 py-2 rounded-full transition-colors">
+                                View Project Website
+                            </a>
+                            <a href="https://doi.org/10.1109/ICMLA61862.2024.00122" target="_blank" rel="noopener noreferrer" class="inline-block bg-slate-200 hover:bg-slate-300 text-slate-800 font-semibold text-sm px-4 py-2 rounded-full transition-colors">
+                                Read the Paper (DOI)
+                            </a>
+                        </div>
+                    </div>
                 </div>
             </div>
-        </div>
+            </div>
     </section>
 
     <section class="py-16">
