--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Junseong Park - Portfolio</title>
+    <title>Junseong Park | Building with AI</title>
+    <link rel="icon" href="images/favicon.png" type="image/png"> 
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -88,7 +89,7 @@
                         <h3 class="text-xl font-bold text-slate-900">AI Vision (IntelliBeeHive)</h3>
                         <p class="text-slate-600 mt-2">An AI/IoT monitoring system for honey bees, funded by the USDA.</p>
                         <div class="mt-6 flex flex-wrap gap-4">
-                            <a href="https://miutrgv.github.io/research/bee-monitoring.html" target="_blank" rel="noopener noreferrer" class="inline-block bg-sky-100 hover:bg-sky-200 text-sky-800 font-semibold text-sm px-4 py-2 rounded-full transition-colors">
+                            <a href="https://bee.utrgv.edu" target="_blank" rel="noopener noreferrer" class="inline-block bg-sky-100 hover:bg-sky-200 text-sky-800 font-semibold text-sm px-4 py-2 rounded-full transition-colors">
                                 View Project Website
                             </a>
                             <a href="https://doi.org/10.1109/ICMLA61862.2024.00122" target="_blank" rel="noopener noreferrer" class="inline-block bg-slate-200 hover:bg-slate-300 text-slate-800 font-semibold text-sm px-4 py-2 rounded-full transition-colors">
