--- a/index.html
+++ b/index.html
@@ -158,6 +158,12 @@
                             </svg>
                             GitHub
                         </a>
+                        <a href="https://www.youtube.com/@parkxlab" target="_blank" rel="noopener noreferrer" class="bg-slate-700 hover:bg-slate-800 text-white font-semibold px-6 py-3 rounded-lg transition-colors inline-flex items-center">
+                            <svg class="w-5 h-5 mr-3" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 576 512" fill="currentColor">
+                                <path d="M549.655 124.083c-6.281-23.65-24.787-42.1-48.284-48.597C458.781 64 288 64 288 64S117.22 64 74.629 75.486c-23.497 6.497-41.998 24.947-48.284 48.597-11.412 42.867-11.412 132.305-11.412 132.305s0 89.438 11.412 132.305c6.286 23.65 24.787 42.1 48.284 48.597C117.22 448 288 448 288 448s170.78 0 213.371-11.486c23.497-6.497 41.998-24.947 48.284-48.597 11.412-42.867 11.412-132.305 11.412-132.305s0-89.438-11.412-132.305zM232.615 358.71V153.284l153.286 102.713-153.286 102.713z"/>
+                            </svg>
+                            YouTube
+                        </a>
                         <a href="https://drive.google.com/file/d/1HBWcC8TvF7DF-acNuN-bxJhyv1HpFG_X/view?usp=sharing" target="_blank" rel="noopener noreferrer" class="bg-slate-200 hover:bg-slate-300 text-slate-800 font-semibold px-6 py-3 rounded-lg transition-colors inline-flex items-center" data-lang="resume_download_btn">
                             <svg class="w-5 h-5 mr-2" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor">
                                 <path fill-rule="evenodd" d="M3 17a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1zm3.293-7.707a1 1 0 011.414 0L9 10.586V3a1 1 0 112 0v7.586l1.293-1.293a1 1 0 111.414 1.414l-3 3a1 1 0 01-1.414 0l-3-3a1 1 0 010-1.414z" clip-rule="evenodd" />
