--- a/index.html
+++ b/index.html
@@ -438,7 +438,7 @@
                 nav_contact_mobile: "Contact",
                 // Intro
                 lab_title: "Park's Lab for Learning by building.",
-                lab_subtitle: "An engineer and researcher connecting the worlds of mechanical systems, artificial intelligence, and business strategy. I explore how technology creates real value, from the factory floor to the final line of code.",
+                lab_subtitle: "An engineer and researcher connecting the worlds of mechanical systems, artificial intelligence, and business strategy.",
                 // Projects
                 projects_in_progress: "Projects in progress",
                 finitup_desc: "An AI-powered system to automate financial analysis and valuation.",
@@ -534,7 +534,7 @@
                 nav_contact_mobile: "Contacto",
                 // Intro
                 lab_title: "El Laboratorio de Park para Aprender Construyendo.",
-                lab_subtitle: "Un ingeniero e investigador que conecta los mundos de los sistemas mecánicos, la inteligencia artificial y la estrategia empresarial. Exploro cómo la tecnología crea valor real, desde la planta de producción hasta la última línea de código.",
+                lab_subtitle: "Un ingeniero e investigador que conecta los mundos de los sistemas mecánicos, la inteligencia artificial y la estrategia empresarial.",
                 // Projects
                 projects_in_progress: "Proyectos en progreso",
                 finitup_desc: "Un sistema impulsado por IA para automatizar el análisis y la valoración financiera.",
@@ -629,7 +629,7 @@
                 nav_contact_mobile: "연락처",
                 // Intro
                 lab_title: "만들면서 배우는 박's 랩.",
-                lab_subtitle: "기계 시스템, 인공지능, 비즈니스 전략의 세계를 연결하는 엔지니어이자 연구원입니다. 저는 공장 현장에서부터 코드의 마지막 줄에 이르기까지, 기술이 어떻게 실질적인 가치를 창출하는지 탐구합니다.",
+                lab_subtitle: "기계 시스템, 인공지능, 비즈니스 전략의 세계를 연결하는 엔지니어이자 연구원입니다.",
                 // Projects
                 projects_in_progress: "진행 중인 프로젝트",
                 finitup_desc: "AI를 활용해 재무 분석 및 가치 평가를 자동화하는 시스템입니다.",
@@ -641,7 +641,7 @@
                 // About
                 hero_name: "박준성",
                 hero_title: "AI 엔지니어 및 교육자",
-                hero_subtitle: "기계 시스템, 인공 지능 및 비즈니스 전략의 세계를 연결하는 엔지니어 및 연구원. 나는 현장에서부터 코드의 마지막 줄에 이르기까지 기술이 어떻게 진정한 가치를 창출하는지 탐구합니다.",
+                hero_subtitle: "기술에 대한 나의 여정은 코드가 아니라 군대와 공장 현장에서 복잡한 시스템을 유지하는 하드웨어에서 시작되었습니다. 이 실습 경험은 물리적 기계와 지능형 소프트웨어 사이의 격차를 해소하여 실제 비즈니스 문제를 해결하는 AI 솔루션을 구축하는 데 적용할 수 있는 독특한 관점을 제공했습니다.",
                 linkedin_btn: "링크드인",
                 github_btn: "깃허브",
                 resume_download_btn: "이력서 다운로드",
