--- a/index.html
+++ b/index.html
@@ -437,7 +437,7 @@
                 finitup_desc: "An AI-powered system to automate financial analysis and valuation.",
                 aiclub_desc: "A community to make AI accessible for all students through hands-on projects.",
                 completed_projects: "Completed projects",
-                intellibeehive_desc: "An AI/IoT monitoring system for honey bees, funded by the USDA.",
+                intellibeehive_desc: "I contributed to the development of a USDA-funded AI/IoT monitoring system for honey bees.",
                 view_project_website_btn: "View Project Website",
                 read_paper_btn: "Read the Paper (DOI)",
                 // About
@@ -624,7 +624,7 @@
                 finitup_desc: "AI를 활용해 재무 분석 및 가치 평가를 자동화하는 시스템입니다.",
                 aiclub_desc: "실습 프로젝트를 통해 모든 학생이 AI에 쉽게 접근할 수 있도록 돕는 커뮤니티입니다.",
                 completed_projects: "완료된 프로젝트",
-                intellibeehive_desc: "미국 농무부(USDA)의 지원을 받은 꿀벌을 위한 AI/IoT 모니터링 시스템입니다.",
+                intellibeehive_desc: "미국 농무부(USDA)의 지원을 받은 꿀벌을 위한 AI/IoT 모니터링 시스템에 기여했습니다.",
                 view_project_website_btn: "프로젝트 웹사이트 보기",
                 read_paper_btn: "논문 읽기 (DOI)",
                 // About
