--- a/index.html
+++ b/index.html
@@ -435,7 +435,7 @@
                 read_paper_btn: "Read the Paper (DOI)",
                 // About
                 hero_name: "Junseong Park",
-                hero_title: "Information Systems Specialist & AI Developer",
+                hero_title: "AI Developer",
                 linkedin_btn: "LinkedIn",
                 github_btn: "GitHub",
                 resume_download_btn: "Download CV",
@@ -524,7 +524,7 @@
                 read_paper_btn: "Leer el Artículo (DOI)",
                 // About
                 hero_name: "Junseong Park",
-                hero_title: "Especialista en Sistemas de Información y Desarrollador de IA",
+                hero_title: "Desarrollador de IA",
                 linkedin_btn: "LinkedIn",
                 github_btn: "GitHub",
                 resume_download_btn: "Descargar CV",
@@ -613,7 +613,7 @@
                 read_paper_btn: "논문 읽기 (DOI)",
                 // About
                 hero_name: "박준성",
-                hero_title: "정보 시스템 전문가 및 AI 개발자",
+                hero_title: "AI 개발자",
                 linkedin_btn: "링크드인",
                 github_btn: "깃허브",
                 resume_download_btn: "이력서 다운로드",
