--- a/index.html
+++ b/index.html
@@ -140,6 +140,7 @@
                 <h1 class="font-poppins text-4xl sm:text-5xl md:text-6xl font-bold text-slate-900 leading-tight" data-lang="hero_name">
                 </h1>
                 <h2 class="font-poppins text-2xl sm:text-3xl md:text-4xl text-slate-700 mt-2" data-lang="hero_title">
+                <h2 class="font-poppins text-2xl sm:text-3xl md:text-4xl text-slate-700 mt-2" data-lang="hero_title2">
                 </h2>
                 <div class="mt-8 mb-8">
                     <a href="mailto:parkxlab@gmail.com" class="text-lg text-slate-800 text-center md:text-left block hover:underline">✉️ Email : parkxlab@gmail.com</a>
@@ -435,7 +436,8 @@
                 read_paper_btn: "Read the Paper (DOI)",
                 // About
                 hero_name: "Junseong Park",
-                hero_title: "AI Developer | Advanced Manufacturing",
+                hero_title: "AI Developer |",
+                hero_title2: "Advanced Manufacturing",
                 linkedin_btn: "LinkedIn",
                 github_btn: "GitHub",
                 resume_download_btn: "Download CV",
@@ -524,7 +526,8 @@
                 read_paper_btn: "Leer el Artículo (DOI)",
                 // About
                 hero_name: "Junseong Park",
-                hero_title: "Desarrollador de IA | Fabricación avanzada",
+                hero_title: "Desarrollador de IA |",
+                hero_title2: "Fabricación avanzada",
                 linkedin_btn: "LinkedIn",
                 github_btn: "GitHub",
                 resume_download_btn: "Descargar CV",
