--- a/index.html
+++ b/index.html
@@ -436,7 +436,7 @@
                 read_paper_btn: "Read the Paper (DOI)",
                 // About
                 hero_name: "Junseong Park",
-                hero_title: "AI Developer |",
+                hero_title: "AI Developer &",
                 hero_title2: "Advanced Manufacturing",
                 linkedin_btn: "LinkedIn",
                 github_btn: "GitHub",
@@ -526,7 +526,7 @@
                 read_paper_btn: "Leer el Artículo (DOI)",
                 // About
                 hero_name: "Junseong Park",
-                hero_title: "Desarrollador de IA |",
+                hero_title: "Desarrollador de IA &",
                 hero_title2: "Fabricación avanzada",
                 linkedin_btn: "LinkedIn",
                 github_btn: "GitHub",
@@ -616,7 +616,8 @@
                 read_paper_btn: "논문 읽기 (DOI)",
                 // About
                 hero_name: "박준성",
-                hero_title: "AI 개발자 | 첨단 제조",
+                hero_title: "AI 개발자 & 첨단 제조",
+                hero_title2: " ",
                 linkedin_btn: "링크드인",
                 github_btn: "깃허브",
                 resume_download_btn: "이력서 다운로드",
